pom lib upgrade